[package]
name = "insert_many"
version = "0.1.1"
authors = ["Robert Habermeier <rphmeier@gmail.com>"]
description = "insert_many optimization for vec-like structures"
license = "MIT"
repository = "https://github.com/rphmeier/insert_many.git"

[dependencies]
smallvec = { version = "0.2.0", optional = true }

[features]
default = ["smallvec"]
